# commiter

./: .env.example  README.md  pyproject.toml
src/: main.py
src/commiter/: cli.py
